Remove useless UnsupportedEncodingException
By using StandardCharsets the code is safe.