@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2025 Tasktop Technologies, Polarion Software and others.
+ * Copyright (c) 2009, 2026 Tasktop Technologies, Polarion Software and others.
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -13,12 +13,12 @@
 package net.openchrom.installer.model;
 
 import java.io.File;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * 
@@ -47,10 +47,8 @@ public class JarDiscoverySource implements IDiscoverySource {
 
 		try {
 			String prefix = jarFile.toURI().toURL().toExternalForm();
-			return new URI("jar:" + prefix + "!/" + URLEncoder.encode(resourceName, "utf-8")).toURL(); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+			return new URI("jar:" + prefix + "!/" + URLEncoder.encode(resourceName, StandardCharsets.UTF_8)).toURL(); //$NON-NLS-1$ //$NON-NLS-2$
 		} catch(MalformedURLException e) {
-			throw new IllegalStateException(e);
-		} catch(UnsupportedEncodingException e) {
 			throw new IllegalStateException(e);
 		} catch(URISyntaxException e) {
 			throw new IllegalStateException(e);
